# Kmm

./: FINAL_LIVE_SOCCER_MATCHES.json  LIVE_SOCCER_MARKET_VERIFICATION.md  MARKET_VERIFICATION_REPORT.md  README.md  SOCCER_STRATEGY.md  __init__.py  detailed_sample_clob.polymarket.com_markets.json  detailed_sample_gamma-api.polymarket.com_events_limit_10&offset_0&active_true.json  detailed_sample_gamma-api.polymarket.com_markets_limit_10&offset_0&active_true.json  efficient_soccer_discovery_results.json  live_markets_research.json  market_discovery_report.md  polymarket_sample_gamma-api__events.json  polymarket_sample_gamma-api__markets_active=true&limit=5.json  polymarket_sports_metadata.json  pyproject.toml
config/: markets_soccer.yaml  params_demo.yaml
scripts/: debug_kalshi_sports.py  debug_polymarket_api.py  debug_polymarket_filtering.py  discover_and_match_markets.py  efficient_market_discovery.py  efficient_soccer_discovery.py  final_soccer_matching.py  live_market_matching.py  quick_live_matching.py  quick_market_check.py  research_live_markets.py  test_discovery_simple.py  test_polymarket_parsing.py
src/: soccer_strategy.py
src/clients/: kalshi_auth.py  kalshi_http.py  polymarket_client.py  polymarket_discovery.py
src/core/: config_generator.py  fair_price.py  fee_model.py  market_data_store.py  market_matcher.py  quoting.py  risk_manager.py
src/models/: config.py  match_phase.py  state_machine.py  types.py
